Fix Add To Do Issue On Mobile Devices

--- a/client/src/stylesheets/shared/form.css
+++ b/client/src/stylesheets/shared/form.css
@@ -53,8 +53,8 @@
 
 .form-add input:focus + label span,
 .form-add input:valid + label span {
-	transform: translateY(-150%);
-	font-size: 0.8rem;
+	transform: translateY(-140%);
+	font-size: 0.7rem;
 	color: var(--color-form-blue);
 }
 
